--- a/src/tokens/color/buttons.css
+++ b/src/tokens/color/buttons.css
@@ -1,14 +1,14 @@
 :root {
   --color-button-text: light-dark(
-    var(--chroma-surface-20),
+    color-mix(in hsl, var(--chroma-primary-70), transparent 89%),
     color-mix(in hsl, var(--chroma-surface-10), transparent 94.5%)
   );
   --color-button-text-hover: light-dark(
-    var(--chroma-surface-80),
+    color-mix(in hsl, var(--chroma-primary-70), transparent 78%),
     color-mix(in hsl, var(--chroma-surface-10), transparent 89%)
   );
   --color-button-text-active: light-dark(
-    var(--chroma-surface-40),
+    color-mix(in hsl, var(--chroma-primary-70), transparent 67%),
     color-mix(in hsl, var(--chroma-surface-80), var(--chroma-surface-70) 50%)
   );
 }
